version/0.13/_sources/api/ansys/dpf/core/operators/min_max/min_over_time_by_entity/InputsMinOverTimeByEntity.rst.txt






:class:`InputsMinOverTimeByEntity`
==================================

.. py:class:: ansys.dpf.core.operators.min_max.min_over_time_by_entity.InputsMinOverTimeByEntity(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   min_over_time_by_entity operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.min_max.min_over_time_by_entity()
   >>> my_fields_container = dpf.FieldsContainer()
   >>> op.inputs.fields_container.connect(my_fields_container)
   >>> my_abs_value = bool()
   >>> op.inputs.abs_value.connect(my_abs_value)
   >>> my_compute_amplitude = bool()
   >>> op.inputs.compute_amplitude.connect(my_compute_amplitude)






.. py:currentmodule:: InputsMinOverTimeByEntity

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~fields_container`
            - Allows to connect fields_container input to the operator.
          * - :py:attr:`~abs_value`
            - Allows to connect abs_value input to the operator.
          * - :py:attr:`~compute_amplitude`
            - Allows to connect compute_amplitude input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.min_max.min_over_time_by_entity import InputsMinOverTimeByEntity

Property detail
---------------

.. py:property:: fields_container
   :type: ansys.dpf.core.inputs.Input


   Allows to connect fields_container input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.min_max.min_over_time_by_entity()
   >>> op.inputs.fields_container.connect(my_fields_container)
   >>> # or
   >>> op.inputs.fields_container(my_fields_container)

.. py:property:: abs_value
   :type: ansys.dpf.core.inputs.Input


   Allows to connect abs_value input to the operator.

   Should use absolute value.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.min_max.min_over_time_by_entity()
   >>> op.inputs.abs_value.connect(my_abs_value)
   >>> # or
   >>> op.inputs.abs_value(my_abs_value)

.. py:property:: compute_amplitude
   :type: ansys.dpf.core.inputs.Input


   Allows to connect compute_amplitude input to the operator.

   Do calculate amplitude.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.min_max.min_over_time_by_entity()
   >>> op.inputs.compute_amplitude.connect(my_compute_amplitude)
   >>> # or
   >>> op.inputs.compute_amplitude(my_compute_amplitude)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.

   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping, Enum,
   :param ScopingsContainer: Input of the operator.
   :type ScopingsContainer: E501
   :param MeshedRegion: Input of the operator.
   :type MeshedRegion: E501
   :param MeshesContainer: Input of the operator.
   :type MeshesContainer: E501
   :param DataSources: Input of the operator.
   :type DataSources: E501
   :param CyclicSupport: Input of the operator.
   :type CyclicSupport: E501
   :param Outputs: Input of the operator.
   :type Outputs: E501
   :param os.PathLike  # noqa: Input of the operator.
   :type os.PathLike  # noqa: E501


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




